add aside, article and footer

--- a/Blog.html
+++ b/Blog.html
@@ -2,27 +2,44 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sara's blog</title>
+    <title>Sara's Betamore Blog Project</title>
     <link rel="stylesheet" type="text/css"  href="./blog.css">
     <script type="text/javascript" src="./blog.js"></script>
   </head>
   <body class="blog-home">
-      <header>
-        <div class="wrap">
-          <h1>Sara's blog site</h1>
+    <header>
+      <div class="wrap">
+        <h1>Sara's blog site</h1>
+      </div>
+      <nav>
+        <div class="inner clearfix">
+            <ul>
+              <li>
+                <a href="/About.html">About</a>
+              </li>
+              <li>
+                <a href="#">Contact</a>
+              </li>
+              <li>
+                <a href="#">Home</a>
+              </li>
+            </ul>
         </div>
-        <nav>
-          <div class="inner clearfix">
-              <ul>
-                  <li>
-                      <a href="/About.html">About</a>
-                  </li>
-                  <li>
-                      <a href="#">Contact</a>
-                  </li>
-                  <li>
-                      <a href="#">Home</a>
-                  </li>
-              </ul>
-          </div>
-      </header>
+    </header>
+    <article>
+      <h2>Title of article</h2>
+      <p>It suddenly struck me that that tiny pea, pretty and blue, was the Earth. I put up my thumb and shut one eye, and my thumb blotted out the planet Earth. I didn't feel like a giant. I felt very, very small.</p>
+
+      <p>We want to explore. We’re curious people. Look back over history, people have put their lives at stake to go out and explore … We believe in what we’re doing. Now it’s time to go.</p>
+    </article>
+    <aside>
+      <h2>Subscribe</h2>
+
+      <h2>Recent posts</h2>
+    </aside>
+    <footer>
+      <p>This is the footer.</p>
+    </footer>
+
+  </body>
+</html>
