--- a/Blog.html
+++ b/Blog.html
@@ -8,7 +8,7 @@
   </head>
   <body class="blog-home">
     <header>
-      <div class="wrap">
+      <div class="inner">
         <h1>Sara's blog site</h1>
       </div>
       <nav>
@@ -25,17 +25,38 @@
               </li>
             </ul>
         </div>
+      </nav>
     </header>
     <article>
-      <h2>Title of article</h2>
-      <p>It suddenly struck me that that tiny pea, pretty and blue, was the Earth. I put up my thumb and shut one eye, and my thumb blotted out the planet Earth. I didn't feel like a giant. I felt very, very small.</p>
+      <div class="inner">
+        <h2>Title of article</h2>
+          <p>It suddenly struck me that that tiny pea, pretty and blue, was the Earth. I put up my thumb and shut one eye, and my thumb blotted out the planet Earth. I didn't feel like a giant. I felt very, very small.</p>
 
-      <p>We want to explore. We’re curious people. Look back over history, people have put their lives at stake to go out and explore … We believe in what we’re doing. Now it’s time to go.</p>
+          <p>We want to explore. We’re curious people. Look back over history, people have put their lives at stake to go out and explore … We believe in what we’re doing. Now it’s time to go.</p>
+      </div>
     </article>
     <aside>
-      <h2>Subscribe</h2>
-
-      <h2>Recent posts</h2>
+      <div class="inner clearfix">
+        <div class="subscribe">
+          <h2>Subscribe</h2>
+          <form>
+              <ul>
+                  <li>
+                      <label for="subscribe">Subscribe Now</label>
+                  </li>
+                  <li>
+                      <input type="text" id="subscribe" placeholder="Enter email"/>
+                  </li>
+                  <li>
+                    <button id="subscribe-now" type="button">Subscribe</button>
+                  </li>
+              </ul>
+          </form>
+        </div>
+        <div class="recent-posts">
+          <h2>Recent posts</h2>
+      </div>
+    </div>
     </aside>
     <footer>
       <p>This is the footer.</p>
