set body width and header css

--- a/Blog.html
+++ b/Blog.html
@@ -9,24 +9,27 @@
   <body class="blog-home">
     <header>
       <div class="inner">
-        <h1>Sara's blog site</h1>
-      </div>
-      <nav>
-        <div class="inner clearfix">
-            <ul>
-              <li>
-                <a href="/About.html">About</a>
-              </li>
-              <li>
-                <a href="#">Contact</a>
-              </li>
-              <li>
-                <a href="#">Home</a>
-              </li>
-            </ul>
-        </div>
-      </nav>
+        <h1>Sara's Blog Project</h1>
+      </div>  
     </header>
+    <nav>
+      <div class="inner clearfix">
+          <ul>
+            <li>
+              <a href="#">Index</a>
+            </li>
+            <li>
+              <a href="/About.html">About</a>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+            </li>
+            <li>
+              <a href="#">Home</a>
+            </li>
+          </ul>
+      </div>
+    </nav>
     <article>
       <div class="inner">
         <h2>Title of article</h2>
