--- a/grid.html
+++ b/grid.html
@@ -3,15 +3,31 @@
 <head>
   <meta charset="utf-8">
   <title>Don't over think Grid</title>
-  <link rel="stylesheet" type="text/css"  href="./grid.css">
+  <link rel="stylesheet" type="text/css"  href="grid.css">
 </head>
 <body>
   <div class="grid">
     <div class="col-2-3">
-       <p>We choose to go to the moon in this decade and do the other things, not because they are easy, but because they are hard, because that goal will serve to organize and measure the best of our energies and skills, because that challenge is one that we are willing to accept, one we are unwilling to postpone, and one which we intend to win.</p>
+       <article class="module">
+         <p>We choose to go to the moon in this decade and do the other things, not because they are easy, but because they are hard, because that goal will serve to organize and measure the best of our energies and skills, because that challenge is one that we are willing to accept, one we are unwilling to postpone, and one which we intend to win.</p>
+      </article>
     </div>
     <div class="col-1-3">
+      <article class="module">
        <p>If you could see the earth illuminated when you were in a place as dark as night, it would look to you more splendid than the moon.</p>
+     </article>
+    </div>
+  </div>
+  <div class="grid grid-pad">
+    <div class="col-1-2">
+       <article class="module">
+         <p>We choose to go to the moon in this decade and do the other things, not because they are easy, but because they are hard, because that goal will serve to organize and measure the best of our energies and skills, because that challenge is one that we are willing to accept, one we are unwilling to postpone, and one which we intend to win.</p>
+      </article>
+    </div>
+    <div class="col-1-2">
+      <article class="module">
+       <p>If you could see the earth illuminated when you were in a place as dark as night, it would look to you more splendid than the moon.</p>
+     </article>
     </div>
   </div>
 
