--- a/grid.html
+++ b/grid.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css"  href="grid.css">
 </head>
 <body>
-  <div class="grid">
+  <div class="grid grid-pad">
     <div class="col-2-3">
        <article class="module">
          <p>We choose to go to the moon in this decade and do the other things, not because they are easy, but because they are hard, because that goal will serve to organize and measure the best of our energies and skills, because that challenge is one that we are willing to accept, one we are unwilling to postpone, and one which we intend to win.</p>
