set columns and html

--- a/Blog.html
+++ b/Blog.html
@@ -10,7 +10,7 @@
     <header>
       <div class="inner">
         <h1>Sara's Blog Project</h1>
-      </div>  
+      </div>
     </header>
     <nav>
       <div class="inner clearfix">
@@ -30,39 +30,44 @@
           </ul>
       </div>
     </nav>
-    <article>
-      <div class="inner">
-        <h2>Title of article</h2>
-          <p>It suddenly struck me that that tiny pea, pretty and blue, was the Earth. I put up my thumb and shut one eye, and my thumb blotted out the planet Earth. I didn't feel like a giant. I felt very, very small.</p>
+    <div class="main">
+      <article>
+        <div class="inner">
+          <h2>Title of article</h2>
+            <p>It suddenly struck me that that tiny pea, pretty and blue, was the Earth. I put up my thumb and shut one eye, and my thumb blotted out the planet Earth. I didn't feel like a giant. I felt very, very small.</p>
 
-          <p>We want to explore. We’re curious people. Look back over history, people have put their lives at stake to go out and explore … We believe in what we’re doing. Now it’s time to go.</p>
-      </div>
-    </article>
-    <aside>
-      <div class="inner clearfix">
-        <div class="subscribe">
-          <h2>Subscribe</h2>
-          <form>
-              <ul>
-                  <li>
-                      <label for="subscribe">Subscribe Now</label>
-                  </li>
-                  <li>
-                      <input type="text" id="subscribe" placeholder="Enter email"/>
-                  </li>
-                  <li>
-                    <button id="subscribe-now" type="button">Subscribe</button>
-                  </li>
-              </ul>
-          </form>
+            <p>We want to explore. We’re curious people. Look back over history, people have put their lives at stake to go out and explore … We believe in what we’re doing. Now it’s time to go.</p>
         </div>
-        <div class="recent-posts">
-          <h2>Recent posts</h2>
-      </div>
+      </article>
     </div>
-    </aside>
+    <div class="sidebar">
+      <aside>
+        <div class="inner clearfix">
+          <div class="subscribe">
+            <form>
+                <ul>
+                    <li>
+                        <label for="subscribe">Subscribe Now</label>
+                    </li>
+                    <li>
+                        <input type="text" id="subscribe" placeholder="Enter email"/>
+                    </li>
+                    <li>
+                      <button id="subscribe-now" type="button">Subscribe</button>
+                    </li>
+                </ul>
+            </form>
+          </div>
+          <div class="recent-posts">
+            <h2>Recent posts</h2>
+        </div>
+      </div>
+      </aside>
+    </div>
     <footer>
+      <div class="inner clearfix">
       <p>This is the footer.</p>
+    </div>
     </footer>
 
   </body>
