--- a/Blog.html
+++ b/Blog.html
@@ -7,33 +7,36 @@
     <script type="text/javascript" src="./blog.js"></script>
   </head>
   <body class="blog-home">
-    <header>
-      <div class="inner">
-        <h1>Sara's Blog Project</h1>
-      </div>
-    </header>
     <nav>
       <div class="inner clearfix">
           <ul>
+
+            <li>
+              <a href="/about.html">About</a>
+            </li>
+            <li>
+              <a href="/contact.html">Contact</a>
+            </li>
+            <li>
+              <a href="/blog.html">Home</a>
+            </li>
             <li>
               <a href="#">Index</a>
-            </li>
-            <li>
-              <a href="/About.html">About</a>
-            </li>
-            <li>
-              <a href="#">Contact</a>
-            </li>
-            <li>
-              <a href="#">Home</a>
             </li>
           </ul>
       </div>
     </nav>
+    <header>
+      <div class="inner">
+        <span>Featured Article</span>
+        <h1>Mitsu: The Cat Who Likes Fish</h1>
+        <img src= "/images/Mitsu2.png" alt="Mitsu the cat who likes fish" id="Mitsu">
+      </div>
+    </header>
     <div class="main">
       <article>
         <div class="inner">
-          <h2>Title of article</h2>
+          <h2>Mitsu: The Cat Who Likes Fish</h2>
             <p>It suddenly struck me that that tiny pea, pretty and blue, was the Earth. I put up my thumb and shut one eye, and my thumb blotted out the planet Earth. I didn't feel like a giant. I felt very, very small.</p>
 
             <p>We want to explore. We’re curious people. Look back over history, people have put their lives at stake to go out and explore … We believe in what we’re doing. Now it’s time to go.</p>
