correct feature class

--- a/Blog.html
+++ b/Blog.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="./blog.js"></script>
   </head>
   <body class="blog-home">
-    <nav>
+    <nav class="clearfix">
       <div class="inner clearfix">
           <ul>
 
@@ -26,27 +26,14 @@
           </ul>
       </div>
     </nav>
-    <header>
-      <div class="inner">
-        <span>Featured Article</span>
-        <h1>Mitsu: The Cat Who Likes Fish</h1>
-        <img src= "/images/Mitsu2.png" alt="Mitsu the cat who likes fish" id="Mitsu">
+    <header class="clearfix">
+      <div class="inner feature">
+        <img src="images/Mitsu2.png" id="mitsu">
       </div>
     </header>
-    <div class="main">
-      <article>
-        <div class="inner">
-          <h2>Mitsu: The Cat Who Likes Fish</h2>
-            <p>It suddenly struck me that that tiny pea, pretty and blue, was the Earth. I put up my thumb and shut one eye, and my thumb blotted out the planet Earth. I didn't feel like a giant. I felt very, very small.</p>
-
-            <p>We want to explore. We’re curious people. Look back over history, people have put their lives at stake to go out and explore … We believe in what we’re doing. Now it’s time to go.</p>
-        </div>
-      </article>
-    </div>
     <div class="sidebar">
-      <aside>
-        <div class="inner clearfix">
-          <div class="subscribe">
+      <aside class="inner clearfix">
+          <div class="subscribe clearfix">
             <form>
                 <ul>
                     <li>
@@ -64,9 +51,19 @@
           <div class="recent-posts">
             <h2>Recent posts</h2>
         </div>
-      </div>
       </aside>
     </div>
+    <div class="main">
+      <article>
+        <div class="inner">
+          <h2>Mitsu: The Cat Who Likes Fish</h2>
+            <p>It suddenly struck me that that tiny pea, pretty and blue, was the Earth. I put up my thumb and shut one eye, and my thumb blotted out the planet Earth. I didn't feel like a giant. I felt very, very small.</p>
+
+            <p>We want to explore. We’re curious people. Look back over history, people have put their lives at stake to go out and explore … We believe in what we’re doing. Now it’s time to go.</p>
+        </div>
+      </article>
+    </div>
+
     <footer>
       <div class="inner clearfix">
       <p>This is the footer.</p>
