change css sheet link

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Sara's Betamore Blog Project</title>
-    <link rel="stylesheet" type="text/css"  href="./blog.css">
-    <script type="text/javascript" src="./blog.js"></script>
+    <link rel="stylesheet" type="text/css"  href="/blog.css">
+    <script type="text/javascript" src="/blog.js"></script>
   </head>
   <body class="blog-home">
     <nav class="clearfix">
