--- a/about.html
+++ b/about.html
@@ -11,16 +11,16 @@
       <div class="inner clearfix">
           <ul>
             <li>
-              <a href="/About.html">About</a>
+              <a href="/about.html">About</a>
             </li>
             <li>
-              <a href="#">Contact</a>
+              <a href="/index.html">Home</a>
             </li>
             <li>
-              <a href="/blog.html">Home</a>
+              <a href="/archive">Archive</a>
             </li>
             <li>
-              <a href="#">Index</a>
+              <a href="/contact.html">Contact</a>
             </li>
           </ul>
       </div>
