--- a/index.html
+++ b/index.html
@@ -11,18 +11,17 @@
     <nav class="clearfix">
       <div class="inner clearfix">
           <ul>
-
             <li>
               <a href="/about.html">About</a>
             </li>
             <li>
+              <a href="/index.html">Home</a>
+            </li>
+            <li>
+              <a href="/archive">Archive</a>
+            </li>
+            <li>
               <a href="/contact.html">Contact</a>
-            </li>
-            <li>
-              <a href="/blog.html">Home</a>
-            </li>
-            <li>
-              <a href="#">Index</a>
             </li>
           </ul>
       </div>
