add viewport meta

--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Sara's Betamore Blog Project</title>
-    <link rel="stylesheet" type="text/css"  href="./blog.css">
+    <link rel="stylesheet" type="text/css"  href="/css/blog.css"/>
+    <link rel="stylesheet" type="text/css"  href="/blog/css/blog.css"/>
     <script type="text/javascript" src="./blog.js"></script>
   </head>
   <body class="blog-about">
