--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Sara's Betamore Blog Project</title>
-    <link rel="stylesheet" type="text/css"  href="/css/blog.css"/>
+    <meta name="description" content="sara's betamore blog project">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css"  href="css/blog.css"/>
     <link rel="stylesheet" type="text/css"  href="/blog/css/blog.css"/>
     <script type="text/javascript" src="js/blog.js"></script>
   </head>
