start coffee html page for ga javascript class

--- a/notes.html
+++ b/notes.html
@@ -1,1 +1,59 @@
 <!-- This document is notes from javascript course at General Assembly-->
+
+<p>Data types = strings, numbers, booleans, NAN
+  Variables(store data temporarily)
+  conditional statements
+  logical and comparison operators
+  reusable code (methods, functions) </p>
+
+  DRY programming - do not repeat yourself
+  brittle code, breaks easily if you have lots of stuff repeated everywhere.
+  not as efficient
+
+  Data types - strings
+
+  string in single quotes
+  array is in brackets
+
+  var dogs =['corgi', 'golden retriever', 'labrador;
+
+  start with letters not numbers, use camel case
+
+  var corgi = function () {
+    return 'dog';
+  }
+
+numbers:
+var numberOne = 1;
+var negativeOne = -1;
+javascript supports four different types of numbers. (floats, integers)
+
+boolean:
+var dog = true;
+var cat = false;
+
+used more in object oriented programming
+use when you want the situation/condition to be one or the other
+
+Conditional statement:
+if (corgi==='dog'){
+  return true;
+}else if (corgi==='cat'){
+  return false;
+}
+triple = signs is absolutely looking for equal to, == double is relative comparison, = single equal sign is assignment.
+FUNCTIONS
+words in parentheses are either parameter or arguments.
+this function will print to the console
+
+function corgisRule () {
+  console.log('Corgi's like totally rock');
+
+}
+corgisRule();
+
+Event Listeners - listen for behaviors (on click, mouse up/down, page scroll, right click, etc.)
+so we bind our functionality to an event listeners
+to listen for behavior
+
+Corgi\'s  ( backslash is the escape character)
