add image to about

--- a/notes.html
+++ b/notes.html
@@ -57,3 +57,7 @@ so we bind our functionality to an event listeners
 to listen for behavior
 
 Corgi\'s  ( backslash is the escape character)
+
+happy path - when we write code and code works
+QA will try to break your code.
+throw different conditions at it
