add form to contact page and photo to about

--- a/notes.html
+++ b/notes.html
@@ -61,3 +61,5 @@ Corgi\'s  ( backslash is the escape character)
 happy path - when we write code and code works
 QA will try to break your code.
 throw different conditions at it
+
+root is always going to be document
