add roboto font

--- a/about.html
+++ b/about.html
@@ -5,9 +5,10 @@
     <title>Sara's Betamore Blog Project</title>
     <link rel="stylesheet" type="text/css"  href="/css/blog.css"/>
     <link rel="stylesheet" type="text/css"  href="/blog/css/blog.css"/>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <script type="text/javascript" src="./blog.js"></script>
   </head>
-  <body class="blog-about">
+  <body class="body-about">
     <nav>
       <div class="inner clearfix">
           <ul>
