--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css"  href="css/blog.css"/>
     <link rel="stylesheet" type="text/css"  href="/blog/css/blog.css"/>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <script type="text/javascript" src="js/blog.js"></script>
   </head>
   <body class="blog-home">
