--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,10 @@
       <div class="inner clearfix">
           <ul>
             <li>
-              <a href="/about.html">About</a>
+              <a href="/index.html">Home</a>
             </li>
             <li>
-              <a href="/index.html">Home</a>
+              <a href="/about.html">About</a>
             </li>
             <li>
               <a href="/archive">Archive</a>
@@ -30,7 +30,7 @@
     <header>
 
     <header>
-    <div>
+    <div class="inner clearfix">
       <h1> Contact Sara</h2>
       <form action="https://formspree.io/saraa.kenney@gmail.com" method="post" autocomplete="on">
         <div>
