--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       <div class="inner clearfix">
           <ul>
             <li>
-              <a href="/about.html">About</a>
+              <a href="/index.html">Home</a>
             </li>
             <li>
-              <a href="/index.html">Home</a>
+              <a href="/about.html">About</a>
             </li>
             <li>
               <a href="/archive">Archive</a>
@@ -71,6 +71,6 @@
       <p>This is the footer.</p>
     </div>
     </footer>
-
+    <script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
   </body>
 </html>
