--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
       <div class="inner clearfix">
           <ul>
             <li>
-              <a href="/index.html">Home</a>
+              <a href="index.html">Home</a>
             </li>
             <li>
-              <a href="/about.html">About</a>
+              <a href="about.html">About</a>
             </li>
             <li>
-              <a href="/archive">Archive</a>
+              <a href="archive">Archive</a>
             </li>
             <li>
-              <a href="/contact.html">Contact</a>
+              <a href="contact.html">Contact</a>
             </li>
           </ul>
       </div>
