add includes directory and files as well as bootstrap grid and jquery

--- a/contact.html
+++ b/contact.html
@@ -1,50 +1,48 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
-    <title>Sara's Betamore Blog Project</title>
+    <title>Contact Sara</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css"  href="css/style.css"/>
     <link rel="stylesheet" type="text/css"  href="/css/blog.css"/>
     <link rel="stylesheet" type="text/css"  href="/blog/css/blog.css"/>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <script type="text/javascript" src="./blog.js"></script>
-  </head>
-  <body class="body-contact">
-    <nav class="clearfix">
-      <div class="inner clearfix">
-          <ul>
-            <li>
-              <a href="/index.html">Home</a>
-            </li>
-            <li>
-              <a href="/about.html">About</a>
-            </li>
-            <li>
-              <a href="/archive">Archive</a>
-            </li>
-            <li>
-              <a href="/contact.html">Contact</a>
-            </li>
-          </ul>
-      </div>
+</head>
+<body class="body-contact">
+    <nav id="top-nav" class="clearfix">
+
     </nav>
     <header>
-
-    <header>
-    <div class="inner clearfix">
-      <h1> Contact Sara</h2>
-      <form action="https://formspree.io/saraa.kenney@gmail.com" method="post" autocomplete="on">
-        <div>
-          <label for="name">Name:</label>
-          <input type="text" id="name" name="user_name" placeholder="Your name" class="form-control"/>
-      </div>
-      <div>
-          <label for="mail">E-mail:</label>
-          <input type="email" id="mail" name="user_mail" placeholder="Your email" class="form-control"/>
-      </div>
-      <div>
-          <label for="msg">Message:</label>
-          <textarea id="msg" name="user_message" placeholder="Your message" class="form-control"></textarea>
-      </div>
-      <button type="submit" class="btn">Send</button>
-      </form>
-    <div>
+        <header>
+            <div class="inner clearfix">
+                <h1> Contact Sara</h1>
+                <form action="https://formspree.io/saraa.kenney@gmail.com" method="post" autocomplete="on">
+                    <div>
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="user_name" placeholder="Your name" class="form-control"/>
+                    </div>
+                    <div>
+                        <label for="mail">E-mail:</label>
+                        <input type="email" id="mail" name="user_mail" placeholder="Your email" class="form-control"/>
+                    </div>
+                    <div>
+                        <label for="msg">Message:</label>
+                        <textarea id="msg" name="user_message" placeholder="Your message" class="form-control"></textarea>
+                    </div>
+                    <button type="submit" class="btn">Send</button>
+                </form>
+            </div>
+            <footer></footer>
+            <script src="https://code.jquery.com/jquery-3.1.0.min.js"
+            integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="
+            crossorigin="anonymous">
+            </script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous">
+            </script>
+            <script src="js/main.js" type="text/javascript"></script>
+        </body>
+        </html>
