--- a/index.html
+++ b/index.html
@@ -1,76 +1,66 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <title>Sara's Betamore Blog Project</title>
     <meta name="description" content="sara's betamore blog project">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css"  href="css/blog.css"/>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css"  href="css/style.css"/>
     <link rel="stylesheet" type="text/css"  href="/blog/css/blog.css"/>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <script type="text/javascript" src="js/blog.js"></script>
-  </head>
-  <body class="blog-home">
-    <nav class="clearfix">
-      <div class="inner clearfix">
-          <ul>
-            <li>
-              <a href="index.html">Home</a>
-            </li>
-            <li>
-              <a href="about.html">About</a>
-            </li>
-            <li>
-              <a href="archive">Archive</a>
-            </li>
-            <li>
-              <a href="contact.html">Contact</a>
-            </li>
-          </ul>
-      </div>
+</head>
+<body class="blog-home">
+    <nav id="top-nav" class="clearfix">
+
     </nav>
     <header class="clearfix">
-      <div class="inner feature">
-        <img src="images/Mitsu2.png" id="mitsu">
-      </div>
+        <div class="inner feature">
+            <img src="images/Mitsu2.png" id="mitsu">
+        </div>
     </header>
     <div class="main">
-      <article>
-        <div class="inner">
-          <h2>Mitsu: The Cat Who Likes Fish</h2>
-            <p>It suddenly struck me that that tiny pea, pretty and blue, was the Earth. I put up my thumb and shut one eye, and my thumb blotted out the planet Earth. I didn't feel like a giant. I felt very, very small.</p>
+        <article>
+            <div class="inner">
+                <h2>Mitsu: The Cat Who Likes Fish</h2>
+                <p>It suddenly struck me that that tiny pea, pretty and blue, was the Earth. I put up my thumb and shut one eye, and my thumb blotted out the planet Earth. I didn't feel like a giant. I felt very, very small.</p>
 
-            <p>We want to explore. We’re curious people. Look back over history, people have put their lives at stake to go out and explore … We believe in what we’re doing. Now it’s time to go.</p>
-        </div>
-      </article>
+                <p>We want to explore. We’re curious people. Look back over history, people have put their lives at stake to go out and explore … We believe in what we’re doing. Now it’s time to go.</p>
+            </div>
+        </article>
     </div>
     <div class="sidebar">
-      <aside class="inner clearfix">
-          <div class="subscribe clearfix">
-            <form>
-                <ul>
-                    <li>
-                        <label for="subscribe">Subscribe Now</label>
-                    </li>
-                    <li>
-                        <input type="text" id="subscribe" placeholder="Enter email"/>
-                    </li>
-                    <li>
-                      <button id="subscribe-now" type="button">Subscribe</button>
-                    </li>
-                </ul>
-            </form>
-          </div>
-          <div class="recent-posts">
-            <h2>Recent posts</h2>
-        </div>
-      </aside>
+        <aside class="inner clearfix">
+            <div class="subscribe clearfix">
+                <form>
+                    <ul>
+                        <li>
+                            <label for="subscribe">Subscribe Now</label>
+                        </li>
+                        <li>
+                            <input type="text" id="subscribe" placeholder="Enter email"/>
+                        </li>
+                        <li>
+                            <button id="subscribe-now" type="button">Subscribe</button>
+                        </li>
+                    </ul>
+                </form>
+            </div>
+            <div class="recent-posts">
+                <h2>Recent posts</h2>
+            </div>
+        </aside>
     </div>
-    <footer>
-      <div class="inner clearfix">
-      <p>This is the footer.</p>
-    </div>
-    </footer>
-    <script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
-  </body>
+    <footer></footer>
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js"
+            integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="
+            crossorigin="anonymous">
+    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous">
+    </script>
+    <script src="js/main.js" type="text/javascript"></script>
+</body>
 </html>
