--- a/about.html
+++ b/about.html
@@ -1,74 +1,68 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
-    <title>Sara's Betamore Blog Project</title>
+    <title>About</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css"  href="css/style.css"/>
     <link rel="stylesheet" type="text/css"  href="/css/blog.css"/>
     <link rel="stylesheet" type="text/css"  href="/blog/css/blog.css"/>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <script type="text/javascript" src="./blog.js"></script>
-  </head>
-  <body class="body-about">
-    <nav>
-      <div class="inner clearfix">
-          <ul>
-            <li>
-              <a href="/index.html">Home</a>
-            </li>
-            <li>
-              <a href="/about.html">About</a>
-            </li>
-            <li>
-              <a href="/archive">Archive</a>
-            </li>
-            <li>
-              <a href="/contact.html">Contact</a>
-            </li>
-          </ul>
-      </div>
+</head>
+<body class="body-about">
+    <nav id="top-nav" class="clearfix">
+
     </nav>
     <header>
-      <div class="inner">
-        <h1>Sara's Blog Project</h1>
-      </div>
+        <div class="inner">
+            <h1>Sara's Blog Project</h1>
+        </div>
     </header>
     <div class="main">
-      <article>
-        <div class="inner">
-          <h2>About Me</h2>
-            <p><img src="images/me4.jpg" id="self-portrait"></img>Life can be funny sometimes. You never know what's around the corner and yet if you keep a good attitude, you can turn even the worst circumstances in a life lesson.</p>
-            <p>I started learning web development in early 2016 in response to one of those life lessons and decided to make a blog. I guess I'm the type of person you call a Renaissance soul. I have a myriad of interests and enjoy learning new skills and new ways to express myself.</p>
-            <p>I have a loving family and adore my cat, Mitsu, who rescued herself in the winter of 2011 by riding home under the hood of my car.</p>
-      </article>
-    </div>
-    <div class="sidebar">
-      <aside>
-        <div class="inner clearfix">
-          <div class="subscribe">
-            <form>
-                <ul>
-                    <li>
-                        <label for="subscribe">Subscribe Now</label>
-                    </li>
-                    <li>
-                        <input type="text" id="subscribe" placeholder="Enter email"/>
-                    </li>
-                    <li>
-                      <button id="subscribe-now" type="button">Subscribe</button>
-                    </li>
-                </ul>
-            </form>
-          </div>
-          <div class="recent-posts">
-            <h2>Recent posts</h2>
+        <article>
+            <div class="inner">
+                <h2>About Me</h2>
+                <p><img src="images/me4.jpg" id="self-portrait"></img>Life can be funny sometimes. You never know what's around the corner and yet if you keep a good attitude, you can turn even the worst circumstances in a life lesson.</p>
+                <p>I started learning web development in early 2016 in response to one of those life lessons and decided to make a blog. I guess I'm the type of person you call a Renaissance soul. I have a myriad of interests and enjoy learning new skills and new ways to express myself.</p>
+                <p>I have a loving family and adore my cat, Mitsu, who rescued herself in the winter of 2011 by riding home under the hood of my car.</p>
+            </article>
         </div>
-      </div>
-      </aside>
-    </div>
-    <footer>
-      <div class="inner clearfix">
-      <p>This is the footer.</p>
-    </div>
-    </footer>
-  </body>
-</html>
+        <div class="sidebar">
+            <aside>
+                <div class="inner clearfix">
+                    <div class="subscribe">
+                        <form>
+                            <ul>
+                                <li>
+                                    <label for="subscribe">Subscribe Now</label>
+                                </li>
+                                <li>
+                                    <input type="text" id="subscribe" placeholder="Enter email"/>
+                                </li>
+                                <li>
+                                    <button id="subscribe-now" type="button">Subscribe</button>
+                                </li>
+                            </ul>
+                        </form>
+                    </div>
+                    <div class="recent-posts">
+                        <h2>Recent posts</h2>
+                    </div>
+                </div>
+            </aside>
+        </div>
+        <footer>
+
+        </footer>
+        <script src="https://code.jquery.com/jquery-3.1.0.min.js"
+                integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="
+                crossorigin="anonymous">
+        </script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+                integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+                crossorigin="anonymous">
+        </script>
+        <script src="js/main.js" type="text/javascript"></script>
+    </body>
+    </html>
