update nav for mobile friendly look

--- a/about.html
+++ b/about.html
@@ -8,10 +8,9 @@
     <link rel="stylesheet" type="text/css"  href="/css/blog.css"/>
     <link rel="stylesheet" type="text/css"  href="/blog/css/blog.css"/>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-    <script type="text/javascript" src="./blog.js"></script>
 </head>
 <body class="body-about">
-    <nav id="top-nav" class="clearfix">
+    <nav id="top-nav" class="clearfix navbar navbar-default">
 
     </nav>
     <header>
