--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <title>Sara's Betamore Blog Project</title>
     <meta name="description" content="sara's betamore blog project">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--Boostrap stylesheet-->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css"  href="css/style.css"/>
     <link rel="stylesheet" type="text/css"  href="/blog/css/blog.css"/>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-    <script type="text/javascript" src="js/blog.js"></script>
 </head>
 <body class="blog-home">
-    <nav id="top-nav" class="clearfix">
+    <nav id="top-nav" class="clearfix navbar navbar-default">
 
     </nav>
     <header class="clearfix">
@@ -53,14 +53,17 @@
         </aside>
     </div>
     <footer></footer>
+    <!--Jquery script------>
     <script src="https://code.jquery.com/jquery-3.1.0.min.js"
             integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="
             crossorigin="anonymous">
     </script>
+    <!--Bootstrap javascript------->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous">
     </script>
+    <!--Javacript file------->
     <script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
