--- a/archive.html
+++ b/archive.html
@@ -9,10 +9,9 @@
     <link rel="stylesheet" type="text/css"  href="css/style.css"/>
     <link rel="stylesheet" type="text/css"  href="/blog/css/blog.css"/>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-    <script type="text/javascript" src="js/blog.js"></script>
 </head>
 <body>
-    <nav id="top-nav" class="clearfix">
+    <nav id="top-nav" class="clearfix navbar navbar-default">
 
     </nav>
     <header class="clearfix">
