update index with bootstrap grid

--- a/about.html
+++ b/about.html
@@ -9,7 +9,6 @@
 </head>
 <body class="body-about">
     <nav id="top-nav" class="clearfix navbar navbar-default">
-
     </nav>
     <header>
         <div class="inner">
@@ -19,12 +18,12 @@
     <div class="main">
         <article>
             <div class="inner">
-                <h2>About Me</h2>
+                <h2>About This Blog</h2>
                 <p><img src="images/me4.jpg" id="self-portrait"></img>Life can be funny sometimes. You never know what's around the corner and yet if you keep a good attitude, you can turn even the worst circumstances in a life lesson.</p>
                 <p>I started learning web development in early 2016 in response to one of those life lessons and decided to make a blog. I guess I'm the type of person you call a Renaissance soul. I have a myriad of interests and enjoy learning new skills and new ways to express myself.</p>
                 <p>I have a loving family and adore my cat, Mitsu, who rescued herself in the winter of 2011 by riding home under the hood of my car.</p>
             </article>
-        </div>
+    </div>
         <div class="sidebar">
             <aside>
                 <div class="inner clearfix">
