--- a/index.html
+++ b/index.html
@@ -19,20 +19,17 @@
             <img src="images/Mitsu2.png" id="mitsu">
         </div>
     </header>
-    <div class="main">
-        <article>
-            <div class="inner">
-                <h2>Mitsu: The Cat Who Likes Fish</h2>
-                <p>It suddenly struck me that that tiny pea, pretty and blue, was the Earth. I put up my thumb and shut one eye, and my thumb blotted out the planet Earth. I didn't feel like a giant. I felt very, very small.</p>
+    <div class="main container-fluid">
+        <div class="row">
+            <article class="col-md-8">
+                    <h2>Mitsu: The Cat Who Likes Fish</h2>
+                    <p>It suddenly struck me that that tiny pea, pretty and blue, was the Earth. I put up my thumb and shut one eye, and my thumb blotted out the planet Earth. I didn't feel like a giant. I felt very, very small.</p>
 
-                <p>We want to explore. We’re curious people. Look back over history, people have put their lives at stake to go out and explore … We believe in what we’re doing. Now it’s time to go.</p>
-            </div>
-        </article>
-    </div>
-    <div class="sidebar">
-        <aside class="inner clearfix">
-            <div class="subscribe clearfix">
-                <form>
+                    <p>We want to explore. We’re curious people. Look back over history, people have put their lives at stake to go out and explore … We believe in what we’re doing. Now it’s time to go.</p>
+            </article>
+            <div class="sidebar col-md-4">
+                <aside class="subscribe inner clearfix">
+                    <form>
                     <ul>
                         <li>
                             <label for="subscribe">Subscribe Now</label>
@@ -44,14 +41,13 @@
                             <button id="subscribe-now" type="button">Subscribe</button>
                         </li>
                     </ul>
-                </form>
+                    </form>
+                </aside>
             </div>
-            <div class="recent-posts">
-                <h2>Recent posts</h2>
-            </div>
-        </aside>
+        </div>
     </div>
-    <footer></footer>
+    <footer>
+    </footer>
     <!--Jquery script------>
     <script src="https://code.jquery.com/jquery-3.1.0.min.js"
             integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="
