--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
                 <h2>About This Blog</h2>
                 <p><img src="images/me4.jpg" id="self-portrait"></img>Life can be funny sometimes. You never know what's around the corner and yet if you keep a good attitude, you can turn even the worst circumstances in a life lesson.</p>
                 <p>I started learning web development in early 2016 in response to one of those life lessons and decided to make a blog. I guess I'm the type of person you call a Renaissance soul. I have a myriad of interests and enjoy learning new skills and new ways to express myself.</p>
-                <p>I have a loving family and adore my cat, Mitsu, who rescued herself in the winter of 2011 by riding home under the hood of my car.</p>
+                <p>I have a loving family. I had a cat named Mitsu, who rescued herself in the winter of 2011 by riding home under the hood of my car.</p>
             </article>
     </div>
         <div class="sidebar">
